--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     </div>
 
     <nav class="navbar">
+    <a href="secreto.html">
         <img src="assets/jv-logo.png" alt="Logo JV" height="75">
+    </a>
         <div class="nav-logo">2° San Valentin Juntos </div>
         <ul class="nav-links">
             <li><a href="#hero">Inicio</a></li>
